@@ -100,6 +100,7 @@
             Bangle.js: Re-add E.showMenu predraw callback (fix #2108)
             Bangle.js2: Add hrmRd/hrmWr that allow you to poke the HRM directly
             Bangle.js: Fix for previous SPI flash write verify when <4 bytes written
+            Bangle.js2: Add write protection for bootloader and softdevice to avoid accidental bricking
             
      2v10 : Bangle.js: Improved HRM calculations - swapped autocorrelation for bandpass filter
             Bangle.js: Significantly improved step counting algorithm using bandpass filter (fix #1846)
